out/old/manifests/fem/StatefulSet.fem-prd-web.yaml
metadata:
  name: fem-prd-web
  namespace: fem
  annotations:
    field.cattle.io/publicEndpoints: '[{"addresses":["<IP_72>"],"port":80,"protocol":"HTTP","serviceName":"fem:fem-prd-web-expose","ingressName":"fem:fem-ingress","hostname":"fem.<COMPANY_DOMAIN>","path":"/","allNodes":false}]'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fem-prd-web
  template:
    metadata:
      labels:
        app: fem-prd-web
        app.kubernetes.io/managed-by: spinnaker
        app.kubernetes.io/name: fem
      annotations:
        artifact.spinnaker.io/location: <REDACTED:env>
        artifact.spinnaker.io/name: <REDACTED:env>
        artifact.spinnaker.io/type: <REDACTED:env>
        moniker.spinnaker.io/application: <REDACTED:env>
        moniker.spinnaker.io/cluster: <REDACTED:env>
    spec:
      volumes:
      - name: fem-data
        persistentVolumeClaim:
          claimName: fem-prd-pvc
      containers:
      - name: fem-prd-web
        image: artifactory.<COMPANY><DOMAIN_14>:30807/docker-local/fem/prd/fem:10
        args:
        - --name=fem
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        volumeMounts:
        - name: fem-data
          mountPath: /home/node/firewall_exception_man/data/
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      imagePullSecrets:
      - name: registrypullsecret
      - name: regcred-bart
      schedulerName: default-scheduler
  serviceName: fem-prd-web
  podManagementPolicy: OrderedReady
  updateStrategy:
    type: RollingUpdate
  revisionHistoryLimit: 10
apiVersion: apps/v1
kind: StatefulSet
