out/old/manifests/fem/Service.fem-prd-web-expose.yaml
metadata:
  name: fem-prd-web-expose
  namespace: fem
  labels:
    app.kubernetes.io/instance: fem-prd
  annotations: {}
spec:
  ports:
  - protocol: TCP
    port: 49200
    targetPort: 8080
  selector:
    app: fem-prd-web
  clusterIP: <IP_71>
  type: ClusterIP
  externalIPs:
  - <CLEANUP_IP_5>
  sessionAffinity: <REDACTED:env>
apiVersion: v1
kind: Service
